example-post-1.mdx: updated description

--- a/posts/example-post-1.mdx
+++ b/posts/example-post-1.mdx
@@ -1,10 +1,11 @@
 ---
 type: Post
 title: Next.js Blog Theme Style Guide
-description: >-
-  A style guide for a website is a set of design standards that define the look,
-  feel, and behavior of a digital product, ensuring consistency and cohesion
-  across all pages and elements.
+description: |-
+  Aspiring Data Scientist with practical experience in machine learning, data
+   analytics, and model deployment. Proficient in predictive analytics, data
+   visualization, and MLOps, with a strong programming foundation and a passion for
+   data-driven problem-solving
 date: '2024-11-06'
 ---
 
