example-post-1.mdx: updated title

--- a/posts/example-post-1.mdx
+++ b/posts/example-post-1.mdx
@@ -1,6 +1,6 @@
 ---
 type: Post
-title: Next.js Blog Theme Style Guide
+title: ''
 description: |-
   Aspiring Data Scientist with practical experience in machine learning, data
    analytics, and model deployment. Proficient in predictive analytics, data
